# agent-skill-self-improvement

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  audit.js  audit2.js  package-lock.json  pyproject.toml  screenshot.js
.github/: copilot-instructions.md
.github/agents/: skillforge-evaluator.agent.md  skillforge-evolver.agent.md  skillforge-retriever.agent.md
.github/workflows/: deploy-website.yml  tests.yml
benchmarks/charts/: README.md
benchmarks/results/: benchmark_results.json
benchmarks/tasks/: benchmark_tasks.json
docs/: evaluation.md  integration.md  simulation.md
methodology/: research-guild.md
simulation/ai_skills/: README.md
simulation/human_skills/: SIM-001_retry_decorator.md  SIM-003_cohort_analysis.md
simulation/results/: simulation_results.json
simulation/tasks/: simulation_tasks.json
skills/: evaluate-skills.md  evolve-skill.md  retrieve-and-apply.md
src/skillforge/: __init__.py  config.py
tests/: test_agentic.py  test_core.py  test_evaluation.py  test_generator.py  test_memory.py  test_platform_integration.py  test_retrieval.py  test_verifier.py
website/: index.html  styles.css
wiki/: deviations.md  index.md  log.md  overview.md
wiki/architecture/: agent-interfaces.md  platform-integration.md  system-overview.md
wiki/conventions/: python-style.md  testing-conventions.md
wiki/decisions/: adr-001-use-dataclasses.md
wiki/modules/: agent-adapter.md  api-server.md  benchmark.md  config.md  events.md  evolution.md  failure.md  forge.md  generator.md  llm-middleware.md  memory-manager.md  metrics.md  multi-model.md  (+7 more)
(+29 files in other folders)
