[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "skillforge"
version = "0.1.0"
description = "A self-evolving skill synthesis framework for AI agents"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
